<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/submit"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ingredient_name"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:visibility="gone"
            android:hint="@string/ingredient"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.445"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no"
            android:inputType="textAutoComplete" />

        <TextView
            android:id="@+id/ingredient_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@sample/ingredients" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/gfImageView"
        android:layout_width="67dp"
        android:layout_height="61dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/veganImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/veganindicator"
        android:contentDescription="@string/gf_indicator" />

    <ImageView
        android:id="@+id/veganImageView"
        android:layout_width="59dp"
        android:layout_height="63dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/veganindicator"
        android:contentDescription="@string/vegan_indicator" />

    <TextView
        android:id="@+id/vTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/v"
        app:layout_constraintBottom_toBottomOf="@id/veganImageView"
        app:layout_constraintTop_toTopOf="@id/veganImageView"
        app:layout_constraintStart_toStartOf="@id/veganImageView"
        app:layout_constraintEnd_toEndOf="@id/veganImageView"
        tools:layout_editor_absoluteX="275dp"
        tools:layout_editor_absoluteY="32dp" />

    <TextView
        android:id="@+id/gfTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gf"
        app:layout_constraintBottom_toBottomOf="@id/gfImageView"
        app:layout_constraintTop_toTopOf="@id/gfImageView"
        app:layout_constraintStart_toStartOf="@id/gfImageView"
        app:layout_constraintEnd_toEndOf="@id/gfImageView"
        tools:layout_editor_absoluteX="275dp"
        tools:layout_editor_absoluteY="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>